k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketpardo
  labels:
    name: ticketpardo
    environment: production
